hphp/hack/test/typecheck/shape7.php.exp
File "shape7.php", line 21, characters 10-11:
Invalid return type (Typing[4057])
File "shape7.php", line 20, characters 3-17:
The field 'field2' is missing
File "shape7.php", line 18, characters 18-24:
The field 'field2' is defined
